--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
-	body{
+	body {
 	background-color: 1B75BB;
 	font-size: 72px;
 	font-family: "arial"
-	body}
-	
-	h1{
+	}
+
+	h1 {
 		font-family: "arial"
+	}
+	.shape {
+		background-color:; 
+		height:;
+		size:
